--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,23 +7,43 @@
   --primary-100: 209 250 229;
   --primary-200: 167 243 208;
   --primary-300: 110 231 183;
-  --primary-400: 126 48 225;
-  --primary-500: 16 185 129;
+  --primary-400: 107 183 190;
+  --primary-500: 107 183 190;
   --primary-600: 5 150 105;
   --primary-700: 4 120 87;
   --primary-800: 6 95 70;
   --primary-900: 4 78 56;
   --primary-950: 2 44 34;
-  --surface-0: 255 255 255;
+  --surface-0: 255 255 255 ;
   --surface-50: 248 250 252;
   --surface-100: 241 245 249;
   --surface-200: 0 0 0;
   --surface-300: 203 213 225;
   --surface-400: 148 163 184;
   --surface-500: 100 116 139;
-  --surface-600: 191 191 191;
-  /* --surface-700: 45 55 72;
-  --surface-800: 30 41 59;
-  --surface-900: 15 23 42;
-  --surface-950: 3 6 23; */
+  --surface-600: 0 0 0 ;
+  --surface-700: 45 55 72;
+  --surface-800: 0 0 0;
+  --surface-900: 255 255 255;
+  --surface-950: 3 6 23;
+  --text-color: 0 0 0;
+  --primer-1: #6BB7BE;
+  --gray-primary: #64748B;
+}
+
+.tb-data td {
+  padding: 0.75em;
+  border-bottom: 2px solid #E7EBEE;
+  text-align: center;
+}
+
+.btn-close{
+  padding: 4px;
+  background-color: #E5E5E5;
+  /* color: var(--primer-1); */
+  color: #4F4F4F;
+}
+
+.label {
+  border: 1px solid var(--gray-primary);
 }
